crates/flowscope-core/tests/snapshots/completion_snapshots__snap_ambiguous_columns.snap
---
source: crates/flowscope-core/tests/completion_snapshots.rs
expression: result
---
{
  "clause": "select",
  "shouldShow": false,
  "items": []
}
