crates/flowscope-core/tests/snapshots/completion_snapshots__snap_join_on_condition.snap
---
source: crates/flowscope-core/tests/completion_snapshots.rs
expression: result
---
{
  "clause": "on",
  "shouldShow": false,
  "items": []
}
